<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.paperapp.ui.login.social.LoginSocialViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/gray_bg"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:background="@drawable/ic_login_bg_images"
            android:layout_height="match_parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:padding="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/login_social_logo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_logo_paperapp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_social_text"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/login_social_text"
                app:layout_constraintTop_toBottomOf="@+id/login_social_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/login_social_button_fb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.loginFB()}"
                android:text="@string/login_social_button_fb"
                android:drawableLeft="@drawable/ic_fb"
                android:backgroundTint="@color/blue_fb"
                android:paddingLeft="24dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_social_text"
                app:layout_constraintVertical_bias="0.143" />

            <Button
                android:id="@+id/login_social_button_google"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_google"
                android:backgroundTint="@color/white"
                android:paddingLeft="24dp"
                android:textColor="@color/gray_google_text"
                android:onClick="@{() -> viewmodel.loginGoogle()}"
                android:text="@string/login_social_button_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_social_button_fb" />

            <Button
                android:id="@+id/loginVK"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_vk"
                android:backgroundTint="@color/blue_vk"
                android:paddingLeft="24dp"
                android:textColor="@color/white"
                android:onClick="@{() -> viewmodel.loginVK()}"
                android:text="@string/login_social_button_vk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_social_button_google" />

            <Button
                android:id="@+id/login_button_via_email"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_email"
                android:onClick="@{() -> viewmodel.openEmailLogin()}"
                android:backgroundTint="@color/gray_bg_2"
                android:paddingLeft="24dp"
                android:textColor="@color/white"
                android:text="@string/login_social_button_via_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginVK" />

            <Button
                android:id="@+id/login_button_as_guest"
                android:layout_width="0dp"
                android:layout_marginTop="32dp"
                android:textAllCaps="false"
                android:onClick="@{() -> viewmodel.loginAsGuest()}"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content"
                android:text="@string/login_social_button_as_guest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button_via_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>