<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.paperapp.ui.login.email.confirm.LoginEmailConfirmViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        android:padding="16dp"
        tools:context=".ui.login.email.confirm.LoginEmailConfirmFragment">

        <Button
            android:id="@+id/login_email_confirm_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableEnd="@drawable/ic_cross"
            android:onClick="@{() -> viewmodel.close()}"
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="32dp"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/login_email_confirm_title"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_confirm_close"
            android:layout_height="wrap_content"
            android:text="@string/login_email_confirm_title" />

        <TextView
            android:layout_marginTop="8dp"
            android:textColor="@color/white_60"
            android:id="@+id/login_email_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_email_confirm_title"
            android:text="@{@string/login_email_confirm_text(viewmodel.emailAddressField)}" />

        <Button
            android:id="@+id/login_email_confirm_check_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/GreenButton"
            android:onClick="@{() -> viewmodel.checkEmail()}"
            android:text="@string/login_email_confirm_check_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_confirm_text" />

        <Button
            android:id="@+id/login_email_confirm_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.sendOneMoreTime()}"
            android:text="@string/login_email_confirm_send_one_more_time"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/white_60"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_confirm_check_email" />

        <Button
            android:id="@+id/login_email_confirm_change_email"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/white_60"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.changeEmail()}"
            android:text="@string/login_email_confirm_change_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_confirm_resend" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>